lectura de datos

--- a/lab1/IntroPLN2018_lab_entrega1.ipynb
+++ b/lab1/IntroPLN2018_lab_entrega1.ipynb
@@ -16,12 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import nltk\n",
+    "import sklearn\n",
+    "import json\n",
+    "import os\n",
+    "from random import shuffle, seed"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,10 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3786 comentarios positivos y 3636 comentarios negativos.\n",
+      "['Ambiente muy familiero, para toda la comunidad y para los verdolagas especialmente. Voy siempre con mi viejo cuando Ferro juega de visitante y es cábala. Al menos eso queremos que sea, para repetir el rito una y otra vez. Ampliamente recomendable.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"../dataset/restaurante-review-dataset/\"\n",
+    "posPath = path + \"pos/\"\n",
+    "negPath = path + \"neg/\"\n",
+    "posFiles = os.listdir(posPath)\n",
+    "negFiles = os.listdir(negPath)\n",
+    "posJsons = [json.load(open(posPath + file)) for file in posFiles]\n",
+    "negJsons = [json.load(open(negPath + file)) for file in negFiles]\n",
+    "posCorpus = [(comentario,\"POS\") for comentario in posJsons]\n",
+    "negCorpus = [(comentario,\"NEG\") for comentario in negJsons]\n",
+    "corpus = posCorpus + negCorpus\n",
+    "print(str(len(posCorpus)) + \" comentarios positivos y \" + str(len(negCorpus)) + \" comentarios negativos.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,10 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "oraciones = corpus # ??\n",
+    "seed(3)\n",
+    "shuffle(oraciones)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -413,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
