--- a/lab1/IntroPLN2018_lab_entrega1.ipynb
+++ b/lab1/IntroPLN2018_lab_entrega1.ipynb
@@ -23,7 +23,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /Users/mapereira/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\Luchong\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
@@ -34,7 +35,8 @@
     "import sklearn\n",
     "import json\n",
     "import os\n",
-    "import pprint\n",
+    "import re\n",
+    "from pprint import pprint\n",
     "from random import shuffle, seed"
    ]
   },
@@ -90,40 +92,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ideal para una tarde de sábado. Cafecito + porción de torta de manzana, a la '\n",
-      " 'cual recomiendo agregarle crema chantilly (abundante) o una fresca bocha de '\n",
-      " 'helado.',\n",
-      " 'Como siempre, exelente! Lejos es uno de los mejores lugares de Bs. As. La '\n",
-      " 'comida es casera y exquisita, esta vez probé una cazuela de calamares y '\n",
-      " 'terminé pidiendo otra para compartir con un amigo. Las entradas también son '\n",
-      " 'riquisimas y ni hablar de las pastas, los fucciles a la carbonara son '\n",
-      " 'increibles y las porciones para compartir. El ambiente es exelente y la '\n",
-      " 'atención de los mozos impecable. Realmente me siento como en casa en lo de '\n",
-      " 'Arturito!',\n",
-      " 'una lastima,  no quise ir hasta no probar la empanadas, llame  porque me '\n",
-      " 'habia mudado muy cerca, no solo que me parecio caro primero cuando pedi las '\n",
-      " 'empanadas, sino que cuando abri el paquete y vi algo tan chiquito, parecian '\n",
-      " 'empanadas de copetin, hubiese preferido que me las cobren mas, pero que sean '\n",
-      " 'mas grandes.¿el sabor?, nada de otro mundo.  se ve que tiene una carta de '\n",
-      " 'comidas tipicas, pero la impresion que medio es que toda su cocina es asi, '\n",
-      " 'cara y de porciones chicas. a comparacion  prefiero las empanadas  de la '\n",
-      " 'mezzeta.(2 gustos, pero gigantes)']\n"
+      "['Algo diferente sobre todo por la cordialidad y el servicio. Es en una casa '\n",
+      " 'antigua, dentro de una biblioteca publica, la comida excelentemente '\n",
+      " 'casera,   y la atencion buenisima.',\n",
+      " 'soy un neófito en la cultura gastronómica de buen nivel y aún así el trato y '\n",
+      " 'la amabilidad son destacables...... te hacen sentir muy comodo tanto las '\n",
+      " 'mozas como el dueño.\\r\\n'\n",
+      " 'Los platos son riquisimos.... el menu degustación ( de 7 pasos) es '\n",
+      " 'exquisito... repito que soy un novato de la cultura gastronomica pero   '\n",
+      " 'platos, atencion y precios.... un 10 a todos.',\n",
+      " 'El restaurante se quedo en el tiempo. El ambiente vintage, aunque limpio. '\n",
+      " 'Los mozos, buenos veteranos como los que se solian encontrar. La comida '\n",
+      " 'maso: lomo marsala estaba bien (dos tajadas con papines, $50,) costilla '\n",
+      " 'riojana ($60, dos costillas con bastante nervio y grasa, el jamon crudo muy '\n",
+      " 'salado, los pimientos sin gusto, y las arvejas parecian de lata, el huevo '\n",
+      " 'frito un poco seco.) La panera no merece mencion. Los precios no son '\n",
+      " 'baratos, las pociones no son abundantes. Muy pocos platos de cocina Alemana. '\n",
+      " 'La cerveza estaba bien fria, como se debe. No me entusiasma volver.']\n"
      ]
     }
    ],
    "source": [
     "comentarios = [comentario for (comentario,_) in corpus]\n",
-    "#comentarios = [nltk.tokenize.sent_tokenize(comment, language='english') for (comment,_) in corpus]\n",
     "seed(3)\n",
     "shuffle(comentarios)\n",
-    "pprint.pprint(comentarios[0:3])"
+    "pprint(comentarios[0:3])"
    ]
   },
   {
@@ -142,12 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Usamos primero sent_tokenize para partir los comentarios en oraciones y luego word_tokenize para partir esas oraciones en palabras\n",
+    "\n",
+    "corpus_tokens = [[word for sent in nltk.tokenize.sent_tokenize(comment, language='spanish') for word in nltk.tokenize.word_tokenize(sent)] for comment in comentarios]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +160,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Algo',\n",
+      "  'diferente',\n",
+      "  'sobre',\n",
+      "  'todo',\n",
+      "  'por',\n",
+      "  'la',\n",
+      "  'cordialidad',\n",
+      "  'y',\n",
+      "  'el',\n",
+      "  'servicio',\n",
+      "  '.',\n",
+      "  'Es',\n",
+      "  'en',\n",
+      "  'una',\n",
+      "  'casa',\n",
+      "  'antigua',\n",
+      "  ',',\n",
+      "  'dentro',\n",
+      "  'de',\n",
+      "  'una',\n",
+      "  'biblioteca',\n",
+      "  'publica',\n",
+      "  ',',\n",
+      "  'la',\n",
+      "  'comida',\n",
+      "  'excelentemente',\n",
+      "  'casera',\n",
+      "  ',',\n",
+      "  'y',\n",
+      "  'la',\n",
+      "  'atencion',\n",
+      "  'buenisima',\n",
+      "  '.'],\n",
+      " ['soy',\n",
+      "  'un',\n",
+      "  'neófito',\n",
+      "  'en',\n",
+      "  'la',\n",
+      "  'cultura',\n",
+      "  'gastronómica',\n",
+      "  'de',\n",
+      "  'buen',\n",
+      "  'nivel',\n",
+      "  'y',\n",
+      "  'aún',\n",
+      "  'así',\n",
+      "  'el',\n",
+      "  'trato',\n",
+      "  'y',\n",
+      "  'la',\n",
+      "  'amabilidad',\n",
+      "  'son',\n",
+      "  'destacables',\n",
+      "  '...',\n",
+      "  '...',\n",
+      "  'te',\n",
+      "  'hacen',\n",
+      "  'sentir',\n",
+      "  'muy',\n",
+      "  'comodo',\n",
+      "  'tanto',\n",
+      "  'las',\n",
+      "  'mozas',\n",
+      "  'como',\n",
+      "  'el',\n",
+      "  'dueño',\n",
+      "  '.',\n",
+      "  'Los',\n",
+      "  'platos',\n",
+      "  'son',\n",
+      "  'riquisimos',\n",
+      "  '...',\n",
+      "  '.',\n",
+      "  'el',\n",
+      "  'menu',\n",
+      "  'degustación',\n",
+      "  '(',\n",
+      "  'de',\n",
+      "  '7',\n",
+      "  'pasos',\n",
+      "  ')',\n",
+      "  'es',\n",
+      "  'exquisito',\n",
+      "  '...',\n",
+      "  'repito',\n",
+      "  'que',\n",
+      "  'soy',\n",
+      "  'un',\n",
+      "  'novato',\n",
+      "  'de',\n",
+      "  'la',\n",
+      "  'cultura',\n",
+      "  'gastronomica',\n",
+      "  'pero',\n",
+      "  'platos',\n",
+      "  ',',\n",
+      "  'atencion',\n",
+      "  'y',\n",
+      "  'precios',\n",
+      "  '...',\n",
+      "  '.',\n",
+      "  'un',\n",
+      "  '10',\n",
+      "  'a',\n",
+      "  'todos',\n",
+      "  '.']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint(corpus_tokens[:2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,12 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "corpus_tokens2 = [re.findall(r'\\b(\\d*[^\\W\\d]+\\d*[^\\W\\d]*\\d*)\\b', comment) for comment in comentarios]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -194,10 +311,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Algo diferente sobre todo por la cordialidad y el servicio. Es en una casa '\n",
+      " 'antigua, dentro de una biblioteca publica, la comida excelentemente '\n",
+      " 'casera,   y la atencion buenisima.',\n",
+      " 'soy un neófito en la cultura gastronómica de buen nivel y aún así el trato y '\n",
+      " 'la amabilidad son destacables...... te hacen sentir muy comodo tanto las '\n",
+      " 'mozas como el dueño.\\r\\n'\n",
+      " 'Los platos son riquisimos.... el menu degustación ( de 7 pasos) es '\n",
+      " 'exquisito... repito que soy un novato de la cultura gastronomica pero   '\n",
+      " 'platos, atencion y precios.... un 10 a todos.']\n",
+      "[['Algo',\n",
+      "  'diferente',\n",
+      "  'sobre',\n",
+      "  'todo',\n",
+      "  'por',\n",
+      "  'la',\n",
+      "  'cordialidad',\n",
+      "  'y',\n",
+      "  'el',\n",
+      "  'servicio',\n",
+      "  'Es',\n",
+      "  'en',\n",
+      "  'una',\n",
+      "  'casa',\n",
+      "  'antigua',\n",
+      "  'dentro',\n",
+      "  'de',\n",
+      "  'una',\n",
+      "  'biblioteca',\n",
+      "  'publica',\n",
+      "  'la',\n",
+      "  'comida',\n",
+      "  'excelentemente',\n",
+      "  'casera',\n",
+      "  'y',\n",
+      "  'la',\n",
+      "  'atencion',\n",
+      "  'buenisima'],\n",
+      " ['soy',\n",
+      "  'un',\n",
+      "  'neófito',\n",
+      "  'en',\n",
+      "  'la',\n",
+      "  'cultura',\n",
+      "  'gastronómica',\n",
+      "  'de',\n",
+      "  'buen',\n",
+      "  'nivel',\n",
+      "  'y',\n",
+      "  'aún',\n",
+      "  'así',\n",
+      "  'el',\n",
+      "  'trato',\n",
+      "  'y',\n",
+      "  'la',\n",
+      "  'amabilidad',\n",
+      "  'son',\n",
+      "  'destacables',\n",
+      "  'te',\n",
+      "  'hacen',\n",
+      "  'sentir',\n",
+      "  'muy',\n",
+      "  'comodo',\n",
+      "  'tanto',\n",
+      "  'las',\n",
+      "  'mozas',\n",
+      "  'como',\n",
+      "  'el',\n",
+      "  'dueño',\n",
+      "  'Los',\n",
+      "  'platos',\n",
+      "  'son',\n",
+      "  'riquisimos',\n",
+      "  'el',\n",
+      "  'menu',\n",
+      "  'degustación',\n",
+      "  'de',\n",
+      "  'pasos',\n",
+      "  'es',\n",
+      "  'exquisito',\n",
+      "  'repito',\n",
+      "  'que',\n",
+      "  'soy',\n",
+      "  'un',\n",
+      "  'novato',\n",
+      "  'de',\n",
+      "  'la',\n",
+      "  'cultura',\n",
+      "  'gastronomica',\n",
+      "  'pero',\n",
+      "  'platos',\n",
+      "  'atencion',\n",
+      "  'y',\n",
+      "  'precios',\n",
+      "  'un',\n",
+      "  'a',\n",
+      "  'todos']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint(comentarios[:2])\n",
+    "pprint(corpus_tokens2[:2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,18 +448,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -249,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +482,7 @@
        "        tokenizer=None, vocabulary=None)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,9 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -340,10 +557,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "similar = {}\n",
@@ -362,9 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -378,9 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -408,9 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -431,27 +640,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -486,9 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -509,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
