Agregado seccion tokenizacion

--- a/lab1/IntroPLN2018_lab_entrega1.ipynb
+++ b/lab1/IntroPLN2018_lab_entrega1.ipynb
@@ -16,15 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\Luchong\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package punkt to /home/manuel/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,118 +154,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Algo',\n",
-      "  'diferente',\n",
-      "  'sobre',\n",
-      "  'todo',\n",
-      "  'por',\n",
-      "  'la',\n",
-      "  'cordialidad',\n",
-      "  'y',\n",
+      "[['Descubri',\n",
       "  'el',\n",
-      "  'servicio',\n",
-      "  '.',\n",
-      "  'Es',\n",
-      "  'en',\n",
-      "  'una',\n",
-      "  'casa',\n",
-      "  'antigua',\n",
-      "  ',',\n",
-      "  'dentro',\n",
-      "  'de',\n",
-      "  'una',\n",
-      "  'biblioteca',\n",
-      "  'publica',\n",
-      "  ',',\n",
+      "  'lugar',\n",
+      "  'por',\n",
+      "  'unos',\n",
+      "  'amigos',\n",
+      "  'y',\n",
+      "  'me',\n",
+      "  'sorprendio¡',\n",
       "  'la',\n",
       "  'comida',\n",
-      "  'excelentemente',\n",
-      "  'casera',\n",
-      "  ',',\n",
-      "  'y',\n",
-      "  'la',\n",
-      "  'atencion',\n",
-      "  'buenisima',\n",
-      "  '.'],\n",
-      " ['soy',\n",
-      "  'un',\n",
-      "  'neófito',\n",
-      "  'en',\n",
-      "  'la',\n",
-      "  'cultura',\n",
-      "  'gastronómica',\n",
-      "  'de',\n",
-      "  'buen',\n",
-      "  'nivel',\n",
-      "  'y',\n",
-      "  'aún',\n",
-      "  'así',\n",
-      "  'el',\n",
-      "  'trato',\n",
-      "  'y',\n",
-      "  'la',\n",
-      "  'amabilidad',\n",
-      "  'son',\n",
-      "  'destacables',\n",
-      "  '...',\n",
-      "  '...',\n",
-      "  'te',\n",
-      "  'hacen',\n",
-      "  'sentir',\n",
-      "  'muy',\n",
-      "  'comodo',\n",
-      "  'tanto',\n",
-      "  'las',\n",
-      "  'mozas',\n",
-      "  'como',\n",
-      "  'el',\n",
-      "  'dueño',\n",
-      "  '.',\n",
-      "  'Los',\n",
-      "  'platos',\n",
-      "  'son',\n",
-      "  'riquisimos',\n",
-      "  '...',\n",
-      "  '.',\n",
-      "  'el',\n",
-      "  'menu',\n",
-      "  'degustación',\n",
-      "  '(',\n",
-      "  'de',\n",
-      "  '7',\n",
-      "  'pasos',\n",
-      "  ')',\n",
       "  'es',\n",
-      "  'exquisito',\n",
-      "  '...',\n",
-      "  'repito',\n",
-      "  'que',\n",
-      "  'soy',\n",
-      "  'un',\n",
-      "  'novato',\n",
-      "  'de',\n",
-      "  'la',\n",
-      "  'cultura',\n",
-      "  'gastronomica',\n",
-      "  'pero',\n",
-      "  'platos',\n",
-      "  ',',\n",
-      "  'atencion',\n",
+      "  'impecable',\n",
       "  'y',\n",
-      "  'precios',\n",
-      "  '...',\n",
-      "  '.',\n",
-      "  'un',\n",
-      "  '10',\n",
+      "  'super',\n",
+      "  'abundante¡¡¡',\n",
+      "  'el',\n",
+      "  'servicio',\n",
+      "  'es',\n",
+      "  'bueno',\n",
+      "  ',',\n",
+      "  'mozos',\n",
+      "  'atentos',\n",
       "  'a',\n",
+      "  'los',\n",
+      "  'pedidos',\n",
+      "  'especiales',\n",
+      "  'y',\n",
+      "  'detalles',\n",
+      "  ',',\n",
+      "  'Fuimos',\n",
+      "  'con',\n",
+      "  'un',\n",
+      "  'celiacos',\n",
+      "  'y',\n",
+      "  'sin',\n",
+      "  'dudar',\n",
+      "  'nos',\n",
+      "  'preparARon',\n",
+      "  'un',\n",
+      "  'menu',\n",
+      "  'degustacion',\n",
+      "  'increible¡Sin',\n",
+      "  'lgar',\n",
+      "  'a',\n",
+      "  'dudas',\n",
+      "  'muy',\n",
+      "  'recomendable',\n",
+      "  'NO',\n",
+      "  'SE',\n",
+      "  'LO',\n",
+      "  'PIERDAN'],\n",
+      " ['Es',\n",
+      "  'un',\n",
+      "  'lugar',\n",
+      "  'muy',\n",
+      "  'diferente',\n",
+      "  'desde',\n",
+      "  'que',\n",
+      "  'llegás',\n",
+      "  '.',\n",
+      "  'Tenés',\n",
+      "  'que',\n",
+      "  'golpear',\n",
+      "  'la',\n",
+      "  'puerta',\n",
+      "  'y',\n",
+      "  'enseguida',\n",
+      "  'entrás',\n",
+      "  'a',\n",
+      "  'un',\n",
+      "  'mundo',\n",
+      "  'para',\n",
+      "  'compartir',\n",
+      "  'buenos',\n",
+      "  'momentos',\n",
+      "  'y',\n",
+      "  'platos',\n",
+      "  'con',\n",
+      "  'amigos',\n",
+      "  '.',\n",
+      "  'El',\n",
+      "  'menú',\n",
+      "  'siempre',\n",
+      "  'cambia',\n",
+      "  ',',\n",
+      "  'así',\n",
+      "  'que',\n",
+      "  'está',\n",
+      "  'bueno',\n",
+      "  'que',\n",
       "  'todos',\n",
+      "  'pidan',\n",
+      "  'algo',\n",
+      "  'distinto',\n",
+      "  'y',\n",
+      "  'probar',\n",
+      "  'de',\n",
+      "  'todo',\n",
+      "  'un',\n",
+      "  'poco',\n",
+      "  '.',\n",
+      "  'El',\n",
+      "  'postre',\n",
+      "  'tartuffo',\n",
+      "  'vale',\n",
+      "  'la',\n",
+      "  'pena',\n",
+      "  '(',\n",
+      "  'para',\n",
+      "  'golosos',\n",
+      "  ')',\n",
       "  '.']]\n"
      ]
     }
@@ -290,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,115 +312,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Algo diferente sobre todo por la cordialidad y el servicio. Es en una casa '\n",
-      " 'antigua, dentro de una biblioteca publica, la comida excelentemente '\n",
-      " 'casera,   y la atencion buenisima.',\n",
-      " 'soy un neófito en la cultura gastronómica de buen nivel y aún así el trato y '\n",
-      " 'la amabilidad son destacables...... te hacen sentir muy comodo tanto las '\n",
-      " 'mozas como el dueño.\\r\\n'\n",
-      " 'Los platos son riquisimos.... el menu degustación ( de 7 pasos) es '\n",
-      " 'exquisito... repito que soy un novato de la cultura gastronomica pero   '\n",
-      " 'platos, atencion y precios.... un 10 a todos.']\n",
-      "[['Algo',\n",
-      "  'diferente',\n",
-      "  'sobre',\n",
-      "  'todo',\n",
-      "  'por',\n",
-      "  'la',\n",
-      "  'cordialidad',\n",
-      "  'y',\n",
-      "  'el',\n",
-      "  'servicio',\n",
-      "  'Es',\n",
-      "  'en',\n",
-      "  'una',\n",
-      "  'casa',\n",
-      "  'antigua',\n",
-      "  'dentro',\n",
+      "[['pedimos',\n",
+      "  'delivery',\n",
+      "  'me',\n",
+      "  'parecio',\n",
+      "  'caro',\n",
+      "  'pesos',\n",
+      "  'pizzas',\n",
+      "  'grandes',\n",
       "  'de',\n",
-      "  'una',\n",
-      "  'biblioteca',\n",
-      "  'publica',\n",
-      "  'la',\n",
-      "  'comida',\n",
-      "  'excelentemente',\n",
-      "  'casera',\n",
+      "  'diversos',\n",
+      "  'sabores',\n",
       "  'y',\n",
-      "  'la',\n",
-      "  'atencion',\n",
-      "  'buenisima'],\n",
-      " ['soy',\n",
-      "  'un',\n",
-      "  'neófito',\n",
-      "  'en',\n",
-      "  'la',\n",
-      "  'cultura',\n",
-      "  'gastronómica',\n",
+      "  'porciones',\n",
       "  'de',\n",
-      "  'buen',\n",
-      "  'nivel',\n",
+      "  'faina',\n",
       "  'y',\n",
-      "  'aún',\n",
-      "  'así',\n",
-      "  'el',\n",
-      "  'trato',\n",
-      "  'y',\n",
+      "  'bastante',\n",
+      "  'flojo',\n",
       "  'la',\n",
-      "  'amabilidad',\n",
-      "  'son',\n",
-      "  'destacables',\n",
-      "  'te',\n",
-      "  'hacen',\n",
-      "  'sentir',\n",
+      "  'pizza',\n",
+      "  'llego',\n",
+      "  'tirando',\n",
+      "  'a',\n",
+      "  'fria',\n",
+      "  'y',\n",
+      "  'ni',\n",
+      "  'los',\n",
+      "  'ingredientes',\n",
+      "  'aunque',\n",
+      "  'abundantes',\n",
+      "  'ni',\n",
+      "  'la',\n",
+      "  'masa',\n",
+      "  'eran',\n",
       "  'muy',\n",
-      "  'comodo',\n",
+      "  'buenos',\n",
+      "  'no',\n",
+      "  'reincidiria'],\n",
+      " ['El',\n",
+      "  'mejor',\n",
+      "  'lugar',\n",
+      "  'para',\n",
+      "  'comer',\n",
+      "  'comida',\n",
+      "  'Japonesa',\n",
+      "  'al',\n",
+      "  'que',\n",
+      "  'fui',\n",
+      "  'y',\n",
+      "  'uno',\n",
+      "  'de',\n",
+      "  'los',\n",
+      "  'mejores',\n",
+      "  'en',\n",
+      "  'general',\n",
+      "  'El',\n",
+      "  'servicio',\n",
+      "  'es',\n",
+      "  'INSUPERABLE',\n",
+      "  'El',\n",
+      "  'ambiente',\n",
+      "  'es',\n",
+      "  'muy',\n",
+      "  'tranquilo',\n",
+      "  'ideal',\n",
+      "  'para',\n",
+      "  'charlas',\n",
+      "  'con',\n",
+      "  'amigos',\n",
+      "  'una',\n",
+      "  'salida',\n",
+      "  'romántica',\n",
+      "  'o',\n",
+      "  'ir',\n",
+      "  'a',\n",
+      "  'relajarse',\n",
+      "  'después',\n",
+      "  'de',\n",
+      "  'un',\n",
+      "  'día',\n",
+      "  'complicado',\n",
+      "  'La',\n",
+      "  'decoración',\n",
+      "  'cuidada',\n",
+      "  'hasta',\n",
+      "  'el',\n",
+      "  'último',\n",
+      "  'detalle',\n",
+      "  'te',\n",
+      "  'da',\n",
+      "  'la',\n",
+      "  'sensación',\n",
+      "  'de',\n",
+      "  'estar',\n",
+      "  'en',\n",
+      "  'Japón',\n",
+      "  'Muy',\n",
+      "  'limpio',\n",
       "  'tanto',\n",
-      "  'las',\n",
-      "  'mozas',\n",
-      "  'como',\n",
+      "  'que',\n",
+      "  'Hasta',\n",
+      "  'se',\n",
+      "  'podría',\n",
+      "  'comer',\n",
+      "  'en',\n",
+      "  'los',\n",
+      "  'baños',\n",
+      "  'Muy',\n",
+      "  'económico',\n",
+      "  'para',\n",
+      "  'la',\n",
+      "  'calidad',\n",
+      "  'de',\n",
+      "  'los',\n",
+      "  'platos',\n",
+      "  'que',\n",
+      "  'sirven',\n",
+      "  'Todo',\n",
+      "  'preparado',\n",
+      "  'por',\n",
       "  'el',\n",
       "  'dueño',\n",
-      "  'Los',\n",
-      "  'platos',\n",
-      "  'son',\n",
-      "  'riquisimos',\n",
-      "  'el',\n",
-      "  'menu',\n",
-      "  'degustación',\n",
-      "  'de',\n",
-      "  'pasos',\n",
-      "  'es',\n",
-      "  'exquisito',\n",
-      "  'repito',\n",
       "  'que',\n",
-      "  'soy',\n",
-      "  'un',\n",
-      "  'novato',\n",
+      "  'tiene',\n",
+      "  'mas',\n",
       "  'de',\n",
-      "  'la',\n",
-      "  'cultura',\n",
-      "  'gastronomica',\n",
-      "  'pero',\n",
-      "  'platos',\n",
-      "  'atencion',\n",
-      "  'y',\n",
-      "  'precios',\n",
-      "  'un',\n",
-      "  'a',\n",
-      "  'todos']]\n"
+      "  'años',\n",
+      "  'de',\n",
+      "  'experiencia',\n",
+      "  'Yuki',\n",
+      "  'ya',\n",
+      "  'se',\n",
+      "  'ganó',\n",
+      "  'otro',\n",
+      "  'cliente',\n",
+      "  'frecuente']]\n"
      ]
     }
    ],
    "source": [
-    "pprint(comentarios[:2])\n",
-    "pprint(corpus_tokens2[:2])"
+    "pprint(corpus_tokens2[-2:])"
    ]
   },
   {
@@ -530,21 +575,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1818\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vectores = transf.transform(comentarios)\n",
-    "\n",
-    "print(len(vectores.toarray()[0]))"
+    "vectores = transf.transform(comentarios)"
    ]
   },
   {
@@ -563,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1246,7 @@
     }
    ],
    "source": [
-    "testingCorpus = corpus[:100]\n",
+    "testingCorpus = corpus[:1000]\n",
     "\n",
     "calcular_similitudes(vectores[:100].toarray(), similar, similitud)\n",
     "imprimir_similares(comentarios, similar, similitud)"
