Changed regex in tokenizer

--- a/lab1/IntroPLN2018_lab_entrega1.ipynb
+++ b/lab1/IntroPLN2018_lab_entrega1.ipynb
@@ -299,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus_tokens2 = [re.findall(r'\\b(\\d*[^\\W\\d]+\\d*[^\\W\\d]*\\d*)\\b', comment) for comment in comentarios]"
+    "corpus_tokens2 = [re.findall(r'\\b([^\\W\\d]{3,}|\\d+[^\\W\\d]{2,}|[^\\W\\d]{2,}\\d+|\\d+[^\\W\\d]+\\d+|\\d+[^\\W\\d]+\\d+[^\\W\\d]*\\d+)\\b', comment) for comment in comentarios]"
    ]
   },
   {
@@ -311,115 +311,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Algo diferente sobre todo por la cordialidad y el servicio. Es en una casa '\n",
-      " 'antigua, dentro de una biblioteca publica, la comida excelentemente '\n",
-      " 'casera,   y la atencion buenisima.',\n",
-      " 'soy un neófito en la cultura gastronómica de buen nivel y aún así el trato y '\n",
-      " 'la amabilidad son destacables...... te hacen sentir muy comodo tanto las '\n",
-      " 'mozas como el dueño.\\r\\n'\n",
-      " 'Los platos son riquisimos.... el menu degustación ( de 7 pasos) es '\n",
-      " 'exquisito... repito que soy un novato de la cultura gastronomica pero   '\n",
-      " 'platos, atencion y precios.... un 10 a todos.']\n",
-      "[['Algo',\n",
-      "  'diferente',\n",
-      "  'sobre',\n",
-      "  'todo',\n",
+      "[['Caro',\n",
       "  'por',\n",
-      "  'la',\n",
-      "  'cordialidad',\n",
-      "  'y',\n",
-      "  'el',\n",
-      "  'servicio',\n",
-      "  'Es',\n",
-      "  'en',\n",
-      "  'una',\n",
-      "  'casa',\n",
-      "  'antigua',\n",
-      "  'dentro',\n",
-      "  'de',\n",
-      "  'una',\n",
-      "  'biblioteca',\n",
-      "  'publica',\n",
-      "  'la',\n",
-      "  'comida',\n",
-      "  'excelentemente',\n",
-      "  'casera',\n",
-      "  'y',\n",
-      "  'la',\n",
-      "  'atencion',\n",
-      "  'buenisima'],\n",
-      " ['soy',\n",
-      "  'un',\n",
-      "  'neófito',\n",
-      "  'en',\n",
-      "  'la',\n",
-      "  'cultura',\n",
-      "  'gastronómica',\n",
-      "  'de',\n",
-      "  'buen',\n",
-      "  'nivel',\n",
-      "  'y',\n",
-      "  'aún',\n",
-      "  'así',\n",
-      "  'el',\n",
-      "  'trato',\n",
-      "  'y',\n",
-      "  'la',\n",
-      "  'amabilidad',\n",
-      "  'son',\n",
-      "  'destacables',\n",
-      "  'te',\n",
-      "  'hacen',\n",
-      "  'sentir',\n",
-      "  'muy',\n",
-      "  'comodo',\n",
-      "  'tanto',\n",
-      "  'las',\n",
-      "  'mozas',\n",
-      "  'como',\n",
-      "  'el',\n",
-      "  'dueño',\n",
-      "  'Los',\n",
-      "  'platos',\n",
-      "  'son',\n",
-      "  'riquisimos',\n",
-      "  'el',\n",
-      "  'menu',\n",
-      "  'degustación',\n",
-      "  'de',\n",
-      "  'pasos',\n",
-      "  'es',\n",
-      "  'exquisito',\n",
-      "  'repito',\n",
       "  'que',\n",
-      "  'soy',\n",
-      "  'un',\n",
-      "  'novato',\n",
-      "  'de',\n",
-      "  'la',\n",
-      "  'cultura',\n",
-      "  'gastronomica',\n",
-      "  'pero',\n",
-      "  'platos',\n",
-      "  'atencion',\n",
-      "  'y',\n",
-      "  'precios',\n",
-      "  'un',\n",
-      "  'a',\n",
-      "  'todos']]\n"
+      "  'ambiente',\n",
+      "  'muy',\n",
+      "  'malo',\n",
+      "  'recomiendo',\n",
+      "  'para',\n",
+      "  'nada'],\n",
+      " ['local', 'poquito', 'chico', 'pero', 'comida', 'extraordinaria']]\n"
      ]
     }
    ],
    "source": [
-    "pprint(comentarios[:2])\n",
-    "pprint(corpus_tokens2[:2])"
+    "pprint(corpus_tokens2[-2:])"
    ]
   },
   {
